# chub

./: .cursorrules  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  wrangler.toml
.chub/: .gitignore  config.yaml  pins.yaml
.chub/annotations/: serde--derive.yaml
.chub/context/: architecture.md  conventions.md  team-features.md
.chub/profiles/: base.yaml  cli-dev.yaml  core-dev.yaml
.chub/snapshots/: initial-setup.yaml
.claude/: settings.json
.claude/hooks/: chub-freshness-check.sh
.claude/skills/annotate/: SKILL.md
.claude/skills/setup/: SKILL.md
.entire/: settings.json
.github/: secret_scanning.yml
.github/hooks/: chub-tracking.json
.github/workflows/: ci.yml  release.yml
claude-plugin/: .mcp.json  README.md  settings.json
claude-plugin/.claude-plugin/: plugin.json
claude-plugin/skills/docs/: SKILL.md
content/aiosignal/docs/package/python/: DOC.md
content/amqp/docs/package/python/: DOC.md
content/annotated-types/docs/package/python/: DOC.md
content/anthropic/docs/claude-api/javascript/: DOC.md
content/anthropic/docs/claude-api/python/: DOC.md
content/apache-airflow/docs/providers-apache-impala/python/: DOC.md
content/apache-airflow/docs/providers-apache-kafka/python/: DOC.md
content/apache-airflow/docs/providers-apache-kylin/python/: DOC.md
content/apache-airflow/docs/providers-apache-livy/python/: DOC.md
content/asana/docs/tasks/: DOC.md
content/chub/skills/chub-workflow/: SKILL.md
content/deepseek/docs/llm/: DOC.md
content/edubase/docs/api/: DOC.md
content/elasticsearch/docs/search/: DOC.md
content/firebase/docs/auth/: DOC.md
content/github/docs/octokit/: DOC.md
content/linear/docs/tracker/: DOC.md
content/mailchimp/docs/marketing/: DOC.md
content/mongodb/docs/atlas/: DOC.md
content/paypal/docs/checkout/: DOC.md
content/shopify/docs/storefront/: DOC.md
content/snowflake/docs/cortex-ai-functions/: DOC.md
content/snowflake/docs/cortex-analyst/: DOC.md
content/snowflake/docs/cortex-code-snowsight/: DOC.md
content/snowflake/docs/cortex-search/: DOC.md
content/snowflake/docs/snowflake-notebooks/: DOC.md
content/snowflake/docs/snowpark-python/: DOC.md
content/sourceparts/skills/electronics-sourcing/: SKILL.md
content/stripe/docs/api/: DOC.md
content/vercel/docs/platform/: DOC.md
crates/chub/: Cargo.toml
crates/chub-cli/: Cargo.toml
crates/chub-cli/src/: lib.rs  main.rs  output.rs  welcome.rs
crates/chub-cli/src/commands/: agent_config.rs  annotate.rs  build.rs  bundle.rs  cache.rs  check.rs  context_cmd.rs  detect.rs  feedback.rs  get.rs  init.rs  mod.rs  pin.rs  profile.rs  scan.rs  search.rs  serve.rs  snapshot.rs  stats.rs  telemetry_cmd.rs  track.rs  update.rs
crates/chub-cli/src/mcp/: server.rs  tools.rs
crates/chub-cli/tests/: build_parity.rs
crates/chub-core/: Cargo.toml
crates/chub-core/src/: annotations.rs  cache.rs  config.rs  error.rs  fetch.rs  frontmatter.rs  identity.rs  lib.rs  normalize.rs  registry.rs  telemetry.rs  types.rs  util.rs
crates/chub-core/src/scan/: cel_validate.rs  config.rs  finding.rs  mod.rs  report.rs  rules.toml  scanner.rs  token_filter.rs  words.txt
crates/chub-core/src/search/: bm25.rs  index.rs  mod.rs  tokenizer.rs
crates/chub-core/src/team/: agent_config.rs  analytics.rs  bundles.rs  context.rs  cost.rs  detect.rs  freshness.rs  hooks.rs  mod.rs  org_annotations.rs  pins.rs  profiles.rs  project.rs  session_journal.rs  sessions.rs  snapshots.rs  team_annotations.rs
crates/chub-core/src/team/tracking/: branch_store.rs  checkpoint.rs  mod.rs  redact.rs  session_state.rs  transcript.rs  types.rs
crates/chub-core/tests/: betterleaks_coverage.rs  context_e2e.rs  scan_tests.rs  search_parity.rs  team_features.rs  tracking_e2e.rs  tracking_security.rs
crates/chub/src/: main.rs
crates/chub/tests/: build_parity.rs
docs/: byod-guide.md  chub-vs-context-hub.md  chub-vs-context7.md  claude-code-integration.md  cli-reference.md  compatibility.md  content-guide.md  design.md  feedback-and-annotations.md  index.md  integrations.md  plan.md  private-content.md  tracking.md
docs/features/: agent-annotations.md  search-ranking.md
docs/guide/: agent-config.md  bundles.md  ci-cd.md  detect.md  getting-started.md  installation.md  pinning.md  profiles.md  project-context.md  scanning.md  showcases.md  snapshots.md  tracking.md  vs-context-hub.md  vs-context7.md  why-chub.md
docs/internal/: compatibility.md  design.md  plan.md
docs/internal/features/: agent-annotations.md  search-ranking.md
docs/reference/: cli.md  configuration.md  mcp-server.md
homebrew/: chub.rb
npm/chub/: README.md  index.js  package.json
npm/chub-darwin-arm64/: package.json
npm/chub-darwin-x64/: package.json
npm/chub-linux-arm64/: package.json
npm/chub-linux-x64/: package.json
npm/chub-win32-x64/: package.json
npm/chub/tests/: sdk.test.js
python/: README.md  build_wheel.py  pyproject.toml
python/chub/: __init__.py  __main__.py
python/tests/: test_sdk.py
scripts/: benchmark-scan-repos.sh  benchmark-scan.sh  benchmark.sh  set-version.sh  update-homebrew.sh
website/: .gitignore  index.html  package-lock.json  package.json
website/dashboard/: package-lock.json  package.json  playwright.config.ts  vite.config.ts
website/dashboard/e2e/: dashboard.spec.ts
website/dashboard/src/: App.tsx  index.css
website/dashboard/src/components/: breakdown-charts.tsx  conversation-view.tsx  entire-states.tsx  session-table.tsx  stat-cards.tsx
website/dashboard/src/lib/: api.ts  theme.ts  types.ts
website/docs/: index.md
website/docs/.vitepress/: config.ts  og-image.ts
website/docs/.vitepress/theme/: custom.css
website/docs/guide/: agent-config.md  annotations.md  content-guide.md  detect.md  feedback.md  getting-started.md  installation.md  pinning.md  profiles.md  project-context.md  self-hosting.md  showcases.md  snapshots.md  vs-context-hub.md  vs-context7.md  why-chub.md
website/docs/reference/: cli.md  configuration.md  mcp-server.md
(+810 files in other folders)
