[workspace]
members = ["crates/chub-core", "crates/chub-cli", "crates/chub"]
resolver = "2"

[workspace.package]
version = "0.1.22"
edition = "2021"
license = "MIT"
description = "Chub: agent-agnostic context, tracking, and cost analytics for AI-assisted development"
repository = "https://github.com/nrl-ai/chub"
homepage = "https://github.com/nrl-ai/chub"
authors = ["Viet-Anh Nguyen <vietanh.dev@gmail.com>"]
keywords = ["ai", "documentation", "mcp", "context", "coding-agent"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
chub-core = { path = "crates/chub-core", version = "0.1.22" }
chub-cli = { path = "crates/chub-cli", version = "0.1.22" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
bincode = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "net", "signal"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
clap = { version = "4", features = ["derive"] }
walkdir = "2"
dirs = "6"
sha2 = "0.10"
owo-colors = "4"
flate2 = "1"
tar = "0.4"
rayon = "1"
indicatif = "0.17"
rmcp = { version = "1", features = ["server", "transport-io"] }
schemars = "0.8"
globset = "0.4"
toml = "0.8"
axum = "0.7"
tower-http = { version = "0.6", features = ["fs", "cors"] }
