[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chub"
version = "0.1.3"
description = "Chub: high-performance curated docs for AI coding agents with team sharing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{ name = "Viet-Anh Nguyen", email = "vietanh.dev@gmail.com" }]
keywords = ["ai", "documentation", "mcp", "context", "coding-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Documentation",
]

[project.urls]
Homepage = "https://github.com/vietanhdev/chub"
Repository = "https://github.com/vietanhdev/chub"
Issues = "https://github.com/vietanhdev/chub/issues"

[project.scripts]
chub = "chub:main"

[tool.hatch.build.targets.wheel]
packages = ["chub"]
