[package]
name = "chub-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[lib]
name = "chub_cli"
path = "src/lib.rs"

[dependencies]
chub-core = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
owo-colors = { workspace = true }
tokio = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
indicatif = { workspace = true }
serde_yaml = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
toml = { workspace = true }
globset = { workspace = true }

[dev-dependencies]
tempfile = "3"
