[package]
name = "chub-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }
dirs = { workspace = true }
sha2 = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
rayon = { workspace = true }
globset = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = "3"
axum = { workspace = true }
tokio = { workspace = true }
