[package]
name = "chub"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[[bin]]
name = "chub"
path = "src/main.rs"

[dependencies]
chub-cli = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3"
serde_json = { workspace = true }
